--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-fastapi
-deta
-python-decouple
+asgiref==3.4.1
+click==8.0.1
+deta==1.0.0
+fastapi==0.66.0
+h11==0.12.0
+pydantic==1.8.2
+python-decouple==3.4
+starlette==0.14.2
+typing-extensions==3.10.0.0
+uvicorn==0.14.0
